# paper-phrasebank

./: .gitignore  CHANGELOG.md  LICENSE  README.md  findings.md  paper-phrasebank-requirements-final.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: publish.yml
src/phrasebank/: __init__.py  chunking.py  cli.py  config.py  pipeline.py  search.py  upgrade.py
src/phrasebank/llm/: __init__.py  client.py  extract.py  metadata.py  prompts.py
src/phrasebank/ocr/: __init__.py  mineru.py  paddle.py
src/phrasebank/parsing/: __init__.py  clean.py  docx.py  pdf.py
src/phrasebank/review/: __init__.py  interactive.py  queue.py
src/phrasebank/ui/: __init__.py  config_menu.py  review_render.py
src/phrasebank/vector/: __init__.py  embed.py  schema.py  store.py
tests/: conftest.py  test_chunking.py  test_config.py  test_search.py  test_upgrade.py
tests/e2e/: conftest.py  test_ocr_online.py  test_ocr_pipeline.py  test_pipeline.py
tests/llm/: test_client.py  test_extract.py  test_metadata.py
tests/ocr/: test_mineru.py  test_paddle.py
tests/parsing/: conftest.py  test_clean.py  test_docx.py  test_pdf.py
tests/review/: test_queue.py
tests/vector/: test_embed.py  test_store.py
